FEAT: add project

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                         <div class="row justify-content-center">
                             <div class="col-12">
                                 <img
-                                    src="/src/assets/image/undraw/undraw_learning_qt7d.svg"
+                                    src="/src/assets/image/undraw/undraw_books_wxzz.svg"
                                     alt="image"
                                     class="w-100 p-5"
                                 />
@@ -278,7 +278,7 @@
                         <li>
                             <h5>Programmer</h5>
                             <p>DISKOMINFOTIK Kepulauan Meranti</p>
-                            <p>2022-2024</p>
+                            <p>2022-2025</p>
                         </li>
                         <li>
                             <h5>Laboratory IT staff</h5>
@@ -441,9 +441,10 @@
                     Project.
                 </h1>
             </div>
-            <div class="row g-4" data-masonry='{"percentPosition": true }'>
+            <!-- <div class="row g-4" data-masonry='{"percentPosition": true }'> -->
+            <div class="row g-4">
                 <div class="col-12 col-sm-6 col-md-4">
-                    <div class="card rounded-4 border-0 shadow-sm">
+                    <div class="card rounded-4 border-0 shadow-sm h-100 p-3">
                         <a
                             href="/src/assets/image/project/simpeg.png"
                             target="_blank"
@@ -454,7 +455,7 @@
                                 alt="image"
                             />
                         </a>
-                        <div class="card-body">
+                        <div class="card-body px-0">
                             <h5 class="card-title">
                                 <a
                                     href="https://simpeg.merantikab.go.id/"
@@ -465,22 +466,20 @@
                                 </a>
                             </h5>
                             <p class="card-text fw-light">
-                                SIMPeg. adalah sistem informasi manajemen
-                                kepegawaian BKPSDM (Badan Kepegawaian dan
-                                Pengembangan Sumber Daya Manusia) dilingkungan
-                                Kabupaten Kepulauan Meranti.
+                                Sistem Informasi Manajemen Kepegawaian Kabupaten
+                                Kepulauan Meranti.
                             </p>
-                            <p class="card-text">
-                                <small class="text-body-secondary">
-                                    Laravel, Filamentphp, Bootstrap
-                                </small>
-                            </p>
+                        </div>
+                        <div class="card-footer bg-transparent border-0 p-0">
+                            <small class="text-body-secondary">
+                                Laravel, Filamentphp, Bootstrap
+                            </small>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-12 col-sm-6 col-md-4">
-                    <div class="card rounded-4 border-0 shadow-sm">
+                    <div class="card rounded-4 border-0 shadow-sm h-100 p-3">
                         <a
                             href="/src/assets/image/project/wartawan.png"
                             target="_blank"
@@ -491,7 +490,7 @@
                                 alt="image"
                             />
                         </a>
-                        <div class="card-body">
+                        <div class="card-body px-0">
                             <h5 class="card-title">
                                 <a
                                     href="http://e-wartawan.merantikab.go.id/"
@@ -505,49 +504,81 @@
                                 Aplikasi hitung poin kerja sama Media dan
                                 Pemerintah Kabupaten Kepulauan Meranti
                             </p>
-                            <p class="card-text">
-                                <small class="text-body-secondary">
-                                    Laravel, AdminLTE, Bootstrap
-                                </small>
-                            </p>
+                        </div>
+                        <div class="card-footer bg-transparent border-0 p-0">
+                            <small class="text-body-secondary">
+                                Laravel, AdminLTE, Bootstrap
+                            </small>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-12 col-sm-6 col-md-4">
-                    <div class="card rounded-4 border-0 shadow-sm">
+                    <div class="card rounded-4 border-0 shadow-sm h-100 p-3">
                         <a
-                            href="/src/assets/image/project/simpeg.png"
+                            href="/src/assets/image/project/tamu.png"
                             target="_blank"
                         >
                             <img
-                                src="/src/assets/image/default-img.svg"
+                                src="/src/assets/image/project/thumbnail/tamu.png"
                                 class="card-img-top rounded-4"
                                 alt="image"
                             />
                         </a>
-                        <div class="card-body">
+                        <div class="card-body px-0">
                             <h5 class="card-title">
                                 <a
-                                    href="https://simpeg.merantikab.go.id/"
+                                    href="http://tamu.merantikab.go.id/"
                                     target="_blank"
                                     class="text-reset text-decoration-none"
                                 >
-                                    Lorem ipsum dolor sit.
+                                    Tamu
                                 </a>
                             </h5>
                             <p class="card-text fw-light">
-                                Lorem ipsum dolor sit amet consectetur,
-                                adipisicing elit. Laboriosam voluptatem magnam,
-                                architecto recusandae eveniet autem distinctio
-                                pariatur excepturi, vel voluptatum, enim
-                                repellat neque? Animi, totam!
+                                Aplikasi Buku Tamu yang dapat digunakan oleh
+                                semua OPD di Kabupaten Kepulauan Meranti
                             </p>
-                            <p class="card-text">
-                                <small class="text-body-secondary">
-                                    Laravel, Filamentphp, Bootstrap
-                                </small>
+                        </div>
+                        <div class="card-footer bg-transparent border-0 p-0">
+                            <small class="text-body-secondary">
+                                Laravel, Filamentphp, Bootstrap, Javascript
+                            </small>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-md-4">
+                    <div class="card rounded-4 border-0 shadow-sm h-100 p-3">
+                        <a
+                            href="/src/assets/image/project/sipengsan.png"
+                            target="_blank"
+                        >
+                            <img
+                                src="/src/assets/image/project/thumbnail/sipengsan.png"
+                                class="card-img-top rounded-4"
+                                alt="image"
+                            />
+                        </a>
+                        <div class="card-body px-0">
+                            <h5 class="card-title">
+                                <a
+                                    href="http://sipengsanpdu.merantikab.go.id/"
+                                    target="_blank"
+                                    class="text-reset text-decoration-none"
+                                >
+                                    SiPENGSAN
+                                </a>
+                            </h5>
+                            <p class="card-text fw-light">
+                                Sistem Informasi Pengelolaan Kegiatan Kawasan
+                                Perbatasan, Bagian Pengelola Perbatasan
                             </p>
+                        </div>
+                        <div class="card-footer bg-transparent border-0 p-0">
+                            <small class="text-body-secondary">
+                                Codeigniter3, Bootstrap
+                            </small>
                         </div>
                     </div>
                 </div>
