FIX: remove pading on project

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
             </div>
             <div class="row g-4">
                 <div class="col-12 col-sm-6 col-md-4">
-                    <div class="card rounded-4 border-0 shadow-sm h-100 p-3">
+                    <div class="card rounded-4 border-0 shadow-sm h-100">
                         <a
                             href="/src/assets/image/project/simpeg.png"
                             target="_blank"
@@ -454,7 +454,7 @@
                                 alt="image"
                             />
                         </a>
-                        <div class="card-body px-0">
+                        <div class="card-body">
                             <h5 class="card-title">
                                 <a
                                     href="https://simpeg.merantikab.go.id/"
@@ -469,7 +469,7 @@
                                 Kepulauan Meranti.
                             </p>
                         </div>
-                        <div class="card-footer bg-transparent border-0 p-0">
+                        <div class="card-footer bg-transparent border-0">
                             <small class="text-body-secondary">
                                 Laravel, Filamentphp, Bootstrap
                             </small>
@@ -478,7 +478,7 @@
                 </div>
 
                 <div class="col-12 col-sm-6 col-md-4">
-                    <div class="card rounded-4 border-0 shadow-sm h-100 p-3">
+                    <div class="card rounded-4 border-0 shadow-sm h-100">
                         <a
                             href="/src/assets/image/project/wartawan.png"
                             target="_blank"
@@ -489,7 +489,7 @@
                                 alt="image"
                             />
                         </a>
-                        <div class="card-body px-0">
+                        <div class="card-body">
                             <h5 class="card-title">
                                 <a
                                     href="http://e-wartawan.merantikab.go.id/"
@@ -504,7 +504,7 @@
                                 Pemerintah Kabupaten Kepulauan Meranti
                             </p>
                         </div>
-                        <div class="card-footer bg-transparent border-0 p-0">
+                        <div class="card-footer bg-transparent border-0">
                             <small class="text-body-secondary">
                                 Laravel, AdminLTE, Bootstrap
                             </small>
@@ -513,7 +513,7 @@
                 </div>
 
                 <div class="col-12 col-sm-6 col-md-4">
-                    <div class="card rounded-4 border-0 shadow-sm h-100 p-3">
+                    <div class="card rounded-4 border-0 shadow-sm h-100">
                         <a
                             href="/src/assets/image/project/tamu.png"
                             target="_blank"
@@ -524,7 +524,7 @@
                                 alt="image"
                             />
                         </a>
-                        <div class="card-body px-0">
+                        <div class="card-body">
                             <h5 class="card-title">
                                 <a
                                     href="http://tamu.merantikab.go.id/"
@@ -539,7 +539,7 @@
                                 semua OPD di Kabupaten Kepulauan Meranti
                             </p>
                         </div>
-                        <div class="card-footer bg-transparent border-0 p-0">
+                        <div class="card-footer bg-transparent border-0">
                             <small class="text-body-secondary">
                                 Laravel, Filamentphp, Bootstrap, Javascript
                             </small>
@@ -548,7 +548,7 @@
                 </div>
 
                 <div class="col-12 col-sm-6 col-md-4">
-                    <div class="card rounded-4 border-0 shadow-sm h-100 p-3">
+                    <div class="card rounded-4 border-0 shadow-sm h-100">
                         <a
                             href="/src/assets/image/project/sipengsan.png"
                             target="_blank"
@@ -559,7 +559,7 @@
                                 alt="image"
                             />
                         </a>
-                        <div class="card-body px-0">
+                        <div class="card-body">
                             <h5 class="card-title">
                                 <a
                                     href="http://sipengsanpdu.merantikab.go.id/"
@@ -574,7 +574,7 @@
                                 Perbatasan, Bagian Pengelola Perbatasan
                             </p>
                         </div>
-                        <div class="card-footer bg-transparent border-0 p-0">
+                        <div class="card-footer bg-transparent border-0">
                             <small class="text-body-secondary">
                                 Codeigniter3, Bootstrap
                             </small>
