--- a/index.html
+++ b/index.html
@@ -237,13 +237,13 @@
                     <ul class="fs-5 fw-light">
                         <li>
                             <h5>Sistem Informsi</h5>
-                            <p>Universitah Hangtuah</p>
-                            <p>2021-2022</p>
+                            <div>Universitah Hangtuah</div>
+                            <p class="text-secondary">2021-2022</p>
                         </li>
                         <li>
                             <h5>Manajemen Informatika</h5>
-                            <p>AMIK Selatpanjang</p>
-                            <p>2016-2019</p>
+                            <div>AMIK Selatpanjang</div>
+                            <p class="text-secondary">2016-2019</p>
                         </li>
                     </ul>
                 </div>
@@ -274,16 +274,16 @@
                     >
                         Experience.
                     </h1>
-                    <ul class="fs-5 fw-light list-unstyledd">
+                    <ul class="fs-5 fw-light">
                         <li>
-                            <h5>Programmer</h5>
-                            <p>DISKOMINFOTIK Kepulauan Meranti</p>
-                            <p>2022-2025</p>
+                            <h5>Programmer.</h5>
+                            <div>DISKOMINFOTIK Kepulauan Meranti</div>
+                            <p class="text-secondary">2022-2025</p>
                         </li>
                         <li>
-                            <h5>Laboratory IT staff</h5>
-                            <p>AMIK Selatpanjang</p>
-                            <p>2020-2022</p>
+                            <h5>Laboratory IT staff.</h5>
+                            <div>AMIK Selatpanjang</div>
+                            <p class="text-secondary">2020-2022</p>
                         </li>
                     </ul>
                 </div>
