--- a/index.html
+++ b/index.html
@@ -105,15 +105,16 @@
                                 <a href="#contact" class="nav-link">Contact</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a
+                                <button
+                                    type="button"
                                     class="nav-link dropdown-toggle"
-                                    href="#"
                                     role="button"
                                     data-bs-toggle="dropdown"
                                     aria-expanded="false"
+                                    id="theme-toggle-icon"
                                 >
-                                    Theme
-                                </a>
+                                    <i class="bi bi-circle-half opacity-75"></i>
+                                </button>
                                 <ul class="dropdown-menu dropdown-menu-end">
                                     <li>
                                         <button
@@ -402,7 +403,7 @@
                 <h1
                     class="display-5 fw-bold text-primary-emphasis lh-1 text-center pt-5 pb-3"
                 >
-                    Technologies.
+                    Tech.
                 </h1>
                 <div class="col-sm-12 col-lg-5">
                     <button class="btn btn-outline-secondary btn-lg mb-1">
@@ -426,7 +427,7 @@
                         Bootstrap
                     </button>
                     <button class="btn btn-outline-secondary btn-lg mb-1">
-                        Tailwind CSS
+                        Tailwindcss
                     </button>
                     <button class="btn btn-outline-secondary btn-lg mb-1">
                         <i class="fa-brands fa-js"></i>
@@ -444,10 +445,6 @@
                         Codeigniter
                     </button>
                     <button class="btn btn-outline-secondary btn-lg mb-1">
-                        <i class="fa-brands fa-node-js"></i>
-                        Node.js
-                    </button>
-                    <button class="btn btn-outline-secondary btn-lg mb-1">
                         <i class="fa-solid fa-share-nodes"></i>
                         RestAPIs
                     </button>
@@ -457,9 +454,6 @@
                     </button>
                     <button class="btn btn-outline-secondary btn-lg mb-1">
                         MySQL
-                    </button>
-                    <button class="btn btn-outline-secondary btn-lg mb-1">
-                        SQLite
                     </button>
                     <button class="btn btn-outline-secondary btn-lg mb-1">
                         PostgreSQL
@@ -482,7 +476,7 @@
             </div>
         </section>
 
-        <section id="project" class="container pt-5">
+        <section id="project" class="container py-5">
             <div class="row g-4 pt-5">
                 <h1
                     class="display-5 fw-bold text-primary-emphasis lh-1 text-center pt-5 pb-3"
